--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,6 @@
 @import url(./css/cabecalho.css);
 @import url(./css/banner.css);
+@import url(./css/minhaLista.css);
 
 *{
     box-sizing: border-box;
