--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,7 @@
 @import url(./css/cabecalho.css);
 @import url(./css/banner.css);
 @import url(./css/minhaLista.css);
+@import url(./css/emAlta.css);
 
 *{
     box-sizing: border-box;
