--- a/assets/css/trilhos.css
+++ b/assets/css/trilhos.css
@@ -1,15 +1,15 @@
-.em__alta{
+.trilhos{
     height: 200px;
 }
 
-.em__alta-titulo{
-    color: #e5e5e5e5;
+.trilhos-titulo{
+    color: #E5E5E5E5;
     font-size: 18px;
     line-height: 17px;
     font-weight: 600;
 }
 
-.em__alta-lista{
+.trilhos-lista{
     width: 100%;
     position: relative;
     display: grid;
@@ -17,17 +17,12 @@
     margin: 20px 0;
 }
 
-.em__alta-item{
+.trilhos-item{
     padding: 0 2px;
     transition: 250ms all;
 }
 
-.-animacao:hover{
-    margin: 0 40px;
-    transform: scale(1.2);
-}
-
-.em__alta-img{
+.trilhos-img{
     max-width: 100%;
     padding-right: 5px;
 }
