--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,6 +2,7 @@
 @import url(./css/banner.css);
 @import url(./css/trilhos.css);
 @import url(./css/seriesEstrangeiras.css);
+@import url(./css/rodape.css);
 
 *{
     box-sizing: border-box;
